--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,4 +5,5 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <a asp-action="Expenses" class="btn btn-primary">Overview</a>
+    <a asp-action="CreateEditExpense" class="btn btn-secondary">Create New</a>
 </div>
